used local file/folder in resource properties in template.yaml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,9 @@ phases:
   install:
     commands:
       - npm install time
-      - npm install
-      - node run_zip
-      - aws s3 cp federation.zip s3://sgas.sam.aws-services-federation
-      - aws s3 cp swagger.yaml s3://sgas.sam.aws-services-federation
       - aws cloudformation package
          --template-file template.yaml
-         --s3-bucket sgas.sam.aws-services-federation
+         --s3-bucket $S3_BUCKET_NAME
          --output-template-file samTemplate.yaml
 artifacts:
   type: zip
