--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "federation-build",
+  "name": "federation-src",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-zip": "^3.2.0",
-    "vinyl-fs": "^2.3.1"
+    "aws-sdk": "^2.6.7"
   }
 }
