--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,10 @@ phases:
   install:
     commands:
       - npm install time
-      - npm install
-      - ./node_modules/.bin/replace '__aws_region' $AWS_DEFAULT_REGION ./swagger.yaml
-      - ./node_modules/.bin/replace '__aws_account' $AWS_ACCOUNT_ID ./swagger.yaml
+      - sed -i "s/AWS::REGION/$AWS_DEFAULT_REGION/g" swagger.yaml
+      - sed -i "s/AWS::ACCOUNT_ID/$AWS_ACCOUNT_ID/g" swagger.yaml
+      - sed -i "s/AWS::CUSTOM_AUTHORIZER_LAMBDA_NAME/$CUSTOM_AUTHORIZER_LAMBDA_NAME/g" swagger.yaml
+      - sed -i "s/AWS::CUSTOM_AUTHORIZER_ROLE_ARN/$CUSTOM_AUTHORIZER_ROLE_ARN/g" swagger.yaml
       - aws cloudformation package
          --template-file template.yaml
          --s3-bucket $S3_BUCKET_NAME
