--- a/template.yaml
+++ b/template.yaml
@@ -47,6 +47,7 @@ Resources:
   LambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
+      FunctionName: SungardAS-Federation
       Handler: index.handler
       Runtime: nodejs4.3
       CodeUri: ./src
